<resources>
    <string name="app_name">ClientCounter</string>
    <string name="MenuTitle">Wpisz dopuszczalną liczbę osób</string>
    <string name="Count">Licz osoby</string>
    <string name="Minus">-</string>
    <string name="Plus">+</string>
    <string name="CountTitle">Ilość osób w pomieszczeniu</string>
    <string name="Back">Wróć</string>
    <string name="Counter">TextView</string>
    <string name="Logo">Logo</string>
    <string name="Button1">Start</string>
    <string name="Button2">GuestMode</string>
    <string name="Button3">Options</string>
</resources>